# aws-sdk-python

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  install_clients.sh  mkdocs.yml  pyproject.toml  requirements-docs.in
.github/workflows/: docs.yml
clients/aws-sdk-bedrock-runtime/: CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
clients/aws-sdk-bedrock-runtime/.changes/: 0.4.0.json  0.5.0.json
clients/aws-sdk-bedrock-runtime/.changes/next-release/: aws-sdk-bedrock-runtime-api-change-799059f703a94e11939f38c730de853b.json
clients/aws-sdk-bedrock-runtime/docs/: index.md
clients/aws-sdk-bedrock-runtime/docs/models/: CitationLocation.md  (+151 more)
clients/aws-sdk-python/: CHANGELOG.md  pyproject.toml
clients/aws-sdk-python/.changes/: 0.4.0.json  0.5.0.json
clients/aws-sdk-sagemaker-runtime-http2/: CHANGELOG.md  Makefile  mkdocs.yml  pyproject.toml
clients/aws-sdk-sagemaker-runtime-http2/.changes/: 0.4.0.json  0.5.0.json
clients/aws-sdk-transcribe-streaming/: CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
clients/aws-sdk-transcribe-streaming/.changes/: 0.4.0.json  0.5.0.json
clients/aws-sdk-transcribe-streaming/docs/: index.md
clients/aws-sdk-transcribe-streaming/tests/: test_protocol.py
docs/: SUMMARY.md  index.md
docs/contributing/: index.md
docs/dev-guide/: index.md
docs/javascript/: nav-expand.js
docs/scripts/: gen_client_nav.py
docs/stylesheets/: extra.css
scripts/: cleanup_test_clients.py  create_test_clients.py  generate_doc_stubs.py  generate_nav.py
scripts/docs/: generate_all_doc_stubs.py  generate_nav.py
(+121 files in other folders)
