[project]
name = "aws-sdk-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
]

[dependency-groups]
dev = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.30.1",
    "mkdocs-material==9.7.0",
    "mkdocs-gen-files>=0.5.0",
]
